--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,30 @@
+
 version: "3"
 services:
-    nginx : 
-        image: 
-            nginx:stable-alpine
-        ports: 
-            - "3000:80"
-        volumes: 
-            - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro 
-    node-app:
-        build: .
-        environment: 
-            - PORT=3000
-    mongo:
-        image: mongo
-        environment: 
-            - MONGO_INITDB_ROOT_USERNAME=markan
-            - MONGO_INITDB_ROOT_PASSWORD=markan1312
-        volumes: 
-            - mongo-db:/data/db
-    redis: 
-        image: redis
+  nginx:
+    image: nginx:stable-alpine
+    ports:
+      - "3000:80"
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+  node-app:
+    build: .
+    image: sloppynetworks/node-app
+    environment:
+      - PORT=3000
+    depends_on:
+      - mongo
 
-volumes: 
-    mongo-db:
+  mongo:
+    image: mongo
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=sanjeev
+      - MONGO_INITDB_ROOT_PASSWORD=mypassword
+    volumes:
+      - mongo-db:/data/db
+
+  redis:
+    image: redis
+
+volumes:
+  mongo-db:
