--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -9,7 +9,7 @@ services:
       replicas: 8
       restart_policy:
         condition: any
-      upddate_config:
+      update_config:
         parallelism: 2
         delay: 15s
     build:
